Patch up some spacing issues

--- a/src/components/DynamicSpreadsheet.css
+++ b/src/components/DynamicSpreadsheet.css
@@ -12,7 +12,7 @@ body {
 /* Container */
 .spreadsheet-container {
   width: 800px;
-  height: 600px;
+  height: 570px;
   margin: 40px;
   font-family: var(--font-primary);
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
@@ -42,12 +42,13 @@ body {
 .spreadsheet-table th,
 .spreadsheet-table td {
   border: 0.5px solid #e0e0e0;
-  padding: 8px;
   text-align: left;
   font-weight: normal;
-  min-width: 80px;
+  width: 132px;
   line-height: 1;
-  height: 1rem;
+  height: 40px;
+  box-sizing: border-box;
+  padding: 4px 8px;
 }
 
 .spreadsheet-table th,
@@ -61,6 +62,8 @@ body {
   font-size: 12px;
   color: #777;
   text-align: center;
+  height: 32px;
+  box-sizing: border-box;
 }
 
 .spreadsheet-table th:first-child,
@@ -70,12 +73,19 @@ body {
   left: 0;
   background-color: white;
   z-index: 5;
-  font-weight: bold;
-  font-size: 12px;
-  color: #777;
-  width: 32px;
-  min-width: 32px;
+  width: 40px;
+  min-width: 40px;
   text-align: center;
+  box-sizing: border-box;
+
+  color: rgba(13, 18, 22, 0.70);
+  text-align: center;
+
+  /* Body/Small (Bold) */
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 166.667% */
 }
 
 .spreadsheet-table th:last-child,
@@ -96,7 +106,7 @@ body {
 
 .cell.selected {
   border: 2px solid #8b3dff;
-  padding: 2px 7px;
+  padding: 2px 6.5px;
 }
 
 .cell.editing {
@@ -322,6 +332,5 @@ body {
 
 /* Add some minimum dimensions to cells */
 .spreadsheet-table td {
-  min-width: 80px;
-  height: 25px;
+  min-width: 132px;
 }
